--- a/.dockerignore
+++ b/.dockerignore
@@ -7,9 +7,10 @@
 .dockerignore
 Dockerfile
 docker-compose.yml
+docker-compose.override.yml
 
 # Python
-__pycache__/
+**/__pycache__/
 *.py[cod]
 *$py.class
 *.so
@@ -32,21 +33,55 @@ var/
 venv/
 .venv/
 .env
+.env.*
 
 # Tests
 .coverage
+.coveragerc
 htmlcov/
 .pytest_cache/
 .tox/
 coverage.xml
 *.cover
+.hypothesis/
+.nox/
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Project specific
 data/
-logs/ 
+logs/
+tmp/
+*.log
+*.pid
+
+# AWS specific (if you have these)
+.aws/
+terraform/
+*.pem
+*.key
+
+# Documentation
+docs/
+*.md
+!README.md
+
+# CI/CD (optional - exclude if you don't want them in image)
+.github/
+.gitlab-ci.yml
+Jenkinsfile
+.circleci/
